--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,33 @@
-
 <nav class="navbar navbar-default">
-       <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Welcome to XP Farmer</a>
-        </div>
-    <ul class="nav navbar-nav">
-      <li routerLink="active">
-        <a class="navbar" routerLink="accueil">Accueil</a>
-      </li>
-      <li routerLink="active">
-        <a class="navbar" routerLink="parametre">Parametre</a>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li routerLink="active" >
-        <a class="navbar" routerLink="authentification/new">Creer un compte</a>
-      </li>
-      <li routerLink="active" >
-        <a routerLink="authentification/user">Connexion</a>
-      </li>
-      
-    </ul>
-  
+  <div class="navbar-header">
+    <button
+      type="button"
+      class="navbar-toggle collapsed"
+      data-toggle="collapse"
+      data-target="#bs-example-navbar-collapse-1"
+      aria-expanded="false"
+    >
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Welcome to XP Farmer</a>
+  </div>
+  <ul class="nav navbar-nav">
+    <li>
+      <a class="navbar" routerLink="accueil">Accueil</a>
+    </li>
+    <li>
+      <a class="navbar" routerLink="parametre">Parametre</a>
+    </li>
+  </ul>
+  <ul class="nav navbar-nav navbar-right">
+    <li>
+      <a class="navbar" routerLink="authentification/new">Creer un compte</a>
+    </li>
+    <li>
+      <a routerLink="authentification/user">Connexion</a>
+    </li>
+  </ul>
 </nav>
